--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
          
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#">INTRO</a>
+              <li class="nav-item q5">
+                <a class="nav-link q4" aria-current="page" href="#"><span class="q6">INTRO</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">CREATE</a>
