--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
 </div>
         </div>
       </div>
+      <div class=" w1 ">
+        <div class="row">
+            <div class="col-lg-6">
+                <h1 class="w2">Mix & match <br>your<br> favorite<br> outfits</h1>
+            </div>
+            <div class="col-lg-6"></div>
+        </div>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
