--- a/index.html
+++ b/index.html
@@ -51,11 +51,18 @@
         </div>
       </div>
       <div class=" w1 ">
-        <div class="row">
-            <div class="col-lg-6">
-                <h1 class="w2">Mix & match <br>your<br> favorite<br> outfits</h1>
+        <div class="container py-5">
+            <div class="row py-5">
+                <div class="col-lg-6 mt-5">
+                    <h1 class="w2 mt-5">Mix & match <br>your<br> favorite<br> outfits</h1>
+                </div>
+                <div class="col-lg-6 mt-5">
+                    <div class="w3 mt-5">
+                        <img class="img-fluid w4" src="image/2.jpg" alt="">
+                        <img class="img-fluid w5" src="image/1.png" alt="">
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-6"></div>
         </div>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
